missed vendor reference

--- a/pw/branches/r1117/Src/EditorLib/EditorLib.csproj
+++ b/pw/branches/r1117/Src/EditorLib/EditorLib.csproj
@@ -84,7 +84,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="WeifenLuo.WinFormsUI.Docking, Version=2.3.1.31872, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\vendor\WinFormsUI\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
+      <HintPath>..\..\Vendor\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -93,6 +93,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="BacklinksInfo\BacklinksInfo.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="BacklinksInfo\BacklinksInfo.Designer.cs">
       <DependentUpon>BacklinksInfo.cs</DependentUpon>
@@ -144,6 +145,7 @@
     <Compile Include="NameUtils.cs" />
     <Compile Include="ObjectsBrowser\FolderBookmarks.cs" />
     <Compile Include="OutputPanel\OutputPanel.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="OutputPanel\OutputPanel.Designer.cs">
       <DependentUpon>OutputPanel.cs</DependentUpon>
@@ -177,16 +179,19 @@
     </Compile>
     <Compile Include="ToolBox\ToolBoxItem.cs" />
     <Compile Include="ToolBox\ToolBoxPanel.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Settings\SimpleConfigObject.cs" />
     <Compile Include="ShortcutsInterceptor.cs" />
     <Compile Include="Extensions\AbstractEditor.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Extensions\AbstractPropertyEditor.cs">
     </Compile>
     <Compile Include="Extensions\Checker.cs" />
     <Compile Include="Extensions\ConsoleCommand.cs" />
     <Compile Include="Extensions\Editor.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Extensions\Attributes.cs" />
     <Compile Include="Extensions\Importer.cs" />
@@ -198,6 +203,7 @@
       <DependentUpon>ObjectsBrowserControl.cs</DependentUpon>
     </Compile>
     <Compile Include="ObjectsBrowser\ObjectsBrowserPanel.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="ObjectsBrowser\ObjectsBrowserPanel.designer.cs">
       <DependentUpon>ObjectsBrowserPanel.cs</DependentUpon>
@@ -211,12 +217,14 @@
       <DependentUpon>ObjectSelectorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Panels\EditorPanel.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Panels\PanelsManager.cs" />
     <Compile Include="PropertiesEditor\DBPtrConvertor.cs" />
     <Compile Include="PropertiesEditor\DBPtrEditor.cs">
     </Compile>
     <Compile Include="PropertiesEditor\PropertiesEditorPanel.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="PropertiesEditor\PropertiesEditorPanel.Designer.cs">
       <DependentUpon>PropertiesEditorPanel.cs</DependentUpon>
@@ -453,6 +461,7 @@
     <Compile Include="Scripts\ScriptMachine.cs" />
     <Compile Include="Scripts\ScriptsConfig.cs" />
     <Compile Include="Scripts\ScriptsPanel.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Scripts\ScriptsPanel.Designer.cs">
       <DependentUpon>ScriptsPanel.cs</DependentUpon>
@@ -500,6 +509,7 @@
       <DependentUpon>TableDataPresetsForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Wizards\TableDataEditing\TableDataPanel.cs">
+      <SubType>Form</SubType>
     </Compile>
     <Compile Include="Wizards\TableDataEditing\TableDataPanel.Designer.cs">
       <DependentUpon>TableDataPanel.cs</DependentUpon>
