--- a/pw/branches/r1117/Src/EditorPlugins/EditorPlugins.csproj
+++ b/pw/branches/r1117/Src/EditorPlugins/EditorPlugins.csproj
@@ -75,9 +75,9 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
-    <Reference Include="WeifenLuo.WinFormsUI.Docking, Version=2.2.3190.32241, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="WeifenLuo.WinFormsUI.Docking, Version=2.1.6643.41644, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Vendor\WinFormsUI\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
+      <HintPath>..\..\Vendor\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
