Fixed relative pathes in ClusterAdminSvc

--- a/pw/branches/r1117/Src/ClusterAdminSvc/ClusterAdminSvc.vcproj
+++ b/pw/branches/r1117/Src/ClusterAdminSvc/ClusterAdminSvc.vcproj
@@ -155,11 +155,11 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\..\..\..\..\Prime-World\pw\branches\r1117\Src\Server\ClusterAdmin\ClusterAdminSvc\ClusterAdminImpl.cpp"
+				RelativePath="..\Server\ClusterAdmin\ClusterAdminSvc\ClusterAdminImpl.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\Prime-World\pw\branches\r1117\Src\Server\ClusterAdmin\ClusterAdminSvc\ClusterAdminSvc.cpp"
+				RelativePath="..\Server\ClusterAdmin\ClusterAdminSvc\ClusterAdminSvc.cpp"
 				>
 			</File>
 			<File
@@ -179,15 +179,15 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\Prime-World\pw\branches\r1117\Src\Server\ClusterAdmin\ClusterAdminSvc\LClusterAdminSvcIntf.auto.cpp"
+				RelativePath="..\Server\ClusterAdmin\ClusterAdminSvc\LClusterAdminSvcIntf.auto.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\Prime-World\pw\branches\r1117\Src\Server\ClusterAdmin\ClusterAdminSvc\RClusterAdminSvcIntf.auto.cpp"
+				RelativePath="..\Server\ClusterAdmin\ClusterAdminSvc\RClusterAdminSvcIntf.auto.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\Prime-World\pw\branches\r1117\Src\Server\ClusterAdmin\ClusterAdminSvc\stdafx.cpp"
+				RelativePath="..\Server\ClusterAdmin\ClusterAdminSvc\stdafx.cpp"
 				>
 			</File>
 			<File
