badword nickname check

--- a/pw/branches/r1117/Src/ClusterAdminSvc/ClusterAdminSvc.vcproj
+++ b/pw/branches/r1117/Src/ClusterAdminSvc/ClusterAdminSvc.vcproj
@@ -43,6 +43,8 @@
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
+				UsePrecompiledHeader="2"
+				PrecompiledHeaderThrough="stdafx.h"
 				WarningLevel="3"
 				DebugInformationFormat="4"
 			/>
@@ -114,6 +116,8 @@
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;DO_NOT_USE_DLLMAIN;_DO_ASSERT;STARFORCE_PROTECTED;CURL_STATICLIB"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
+				UsePrecompiledHeader="2"
+				PrecompiledHeaderThrough="stdafx.h"
 				WarningLevel="3"
 				DebugInformationFormat="3"
 			/>
@@ -167,15 +171,75 @@
 				>
 			</File>
 			<File
+				RelativePath="..\Server\ClusterAdmin\ClusterAdminSvc\gen-cpp\ClusterManagement.h"
+				>
+			</File>
+			<File
 				RelativePath="..\Server\ClusterAdmin\ClusterAdminSvc\gen-cpp\ClusterManagement_server.skeleton.cpp"
 				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\Server\ClusterAdmin\ClusterAdminSvc\gen-cpp\ClusterManagementAPI_constants.cpp"
 				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath="..\Server\ClusterAdmin\ClusterAdminSvc\gen-cpp\ClusterManagementAPI_constants.h"
+				>
 			</File>
 			<File
 				RelativePath="..\Server\ClusterAdmin\ClusterAdminSvc\gen-cpp\ClusterManagementAPI_types.cpp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath="..\Server\ClusterAdmin\ClusterAdminSvc\gen-cpp\ClusterManagementAPI_types.h"
 				>
 			</File>
 			<File
@@ -189,14 +253,66 @@
 			<File
 				RelativePath="..\Server\ClusterAdmin\ClusterAdminSvc\stdafx.cpp"
 				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="1"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="1"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath="..\Server\ClusterAdmin\ClusterAdminSvc\stdafx.h"
+				>
 			</File>
 			<File
 				RelativePath="..\Server\ClusterAdmin\ClusterAdminSvc\ThriftHandler.cpp"
 				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\Server\ClusterAdmin\ClusterAdminSvc\ThriftModule.cpp"
 				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="0"
+					/>
+				</FileConfiguration>
 			</File>
 		</Filter>
 		<Filter
