--- a/pw/branches/r1117/Src/PW_Game/PW_Game.vcproj
+++ b/pw/branches/r1117/Src/PW_Game/PW_Game.vcproj
@@ -68,7 +68,7 @@
 				LinkIncremental="2"
 				AdditionalLibraryDirectories=""
 				GenerateDebugInformation="true"
-				GenerateMapFile="true"
+				GenerateMapFile="false"
 				MapFileName="/MAP:pw_game_map"
 				MapExports="true"
 				SubSystem="2"
