--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ pw/branches/r1117/Src/Types.DBTypes/obj
 pw/branches/r1117/Src/Win32/obj
 *.user
 pw/branches/r1117/Src/.vs
+pw/branches/r1117/Src/Bin
+pw/branches/r1117/Src/Data
+pw/branches/r1117/Src/Localization
+pw/branches/r1117/Src/Profiles
+pw/branches/r1117/Src/PW_Game/PW_Game.vcproj.HOLYWORKSTATION.holyd.user
+pw/branches/r1117/Bin_Original/logs
