--- a/pw/branches/r1117/Profiles/game.cfg
+++ b/pw/branches/r1117/Profiles/game.cfg
@@ -6,11 +6,13 @@
 setvar stats_port = 35900
 setvar peer_port = 35007
 
-login_address v343.SITE.com:36615@10
+login_address 26.2.255.15:55001@10
 
-stat_client_url "http://pw.SITE.com:35880/gstat0/"
+stat_client_url "https://26.2.255.15:55880/gstat0/"
 
 local_game 0
+
+setvar use_smooth_turns = 1
 
 // 0 - Custom Lobby
 // 1 - Training only
