talents from web

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,8 @@ pw/branches/r1117/Src/Profiles
 pw/branches/r1117/Src/PW_Game/PW_Game.vcproj.HOLYWORKSTATION.holyd.user
 pw/branches/r1117/Src/Bin/logs
 pw/branches/r1117/Bin_Original/logs
+pw/branches/r1117/Src/PWClassic_Sandbox/_Release
+pw/branches/r1117/Src/PWClassic_Sandbox/PWClassicSandbox/Release
+pw/branches/r1117/Src/Bin/screenshots
+pw_publish/LauncherX/v1.5/Launcher/logs
+pw_publish/LauncherX/v1.5/PatchMaker/logs
