--- a/pw/branches/r1117/Src/PF_GameLogic/PF_GameLogic.vcproj
+++ b/pw/branches/r1117/Src/PF_GameLogic/PF_GameLogic.vcproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9.00"
+	Version="9,00"
 	Name="PF_GameLogic"
 	ProjectGUID="{6426D44C-08D7-4AFA-8682-14128B0FCB33}"
 	RootNamespace="PF_GameLogic"
@@ -3235,6 +3235,18 @@
 			>
 			<File
 				RelativePath=".\StarForce\zzz_StarForce.cpp"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="WebLauncherInteraction"
+			>
+			<File
+				RelativePath=".\WebLauncher.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\WebLauncher.h"
 				>
 			</File>
 		</Filter>
