shipping build progress

--- a/pw/branches/r1117/Src/Version.rc
+++ b/pw/branches/r1117/Src/Version.rc
@@ -26,7 +26,7 @@ FILEVERSION VERSION_MAJOR, VERSION_MINOR, VERSION_PATCH, VERSION_REVISION_PATCHE
 PRODUCTVERSION VERSION_MAJOR, VERSION_MINOR, VERSION_PATCH, VERSION_REVISION_PATCHED
 FILEOS VOS__WINDOWS32
 FILETYPE VFT_APP
-#ifndef _SHIPPING
+#ifndef _SHIP_FALSE
 FILEFLAGS (VS_FF_DEBUG | VS_FF_SPECIALBUILD)
 #endif
 {
@@ -43,7 +43,7 @@ FILEFLAGS (VS_FF_DEBUG | VS_FF_SPECIALBUILD)
       VALUE "OriginalFilename", PRODUCT_EXECUTABLE
       VALUE "ProductName", PRODUCT_TITLE
       VALUE "ProductVersion", COMBINE_AS_STRINGS2( VERSION_MAJOR, VERSION_MINOR )
-#ifndef _SHIPPING
+#ifndef _SHIP_FALSE
       VALUE "SpecialBuild", "private"
 #endif
     }
