Fixed active panel bar (loads active talents from from bottom to top -> from left to right). Added web-token authentication.

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ pw/branches/r1117/Src/PWClassic_Sandbox/PWClassicSandbox/Release
 pw/branches/r1117/Src/Bin/screenshots
 pw_publish/LauncherX/v1.5/Launcher/logs
 pw_publish/LauncherX/v1.5/PatchMaker/logs
+*.vsidx
+*.cache
