--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ pw_publish/LauncherX/v1.5/Launcher/logs
 pw_publish/LauncherX/v1.5/PatchMaker/logs
 *.vsidx
 *.cache
+pw/branches/r1117/Profiles/PF_Editor.config
