Updated version and copyright. Disabled stat_enabled, added server_ip.h to PW_Game project (no file included)

--- a/pw/branches/r1117/Src/PW_Game/PW_Game.vcproj
+++ b/pw/branches/r1117/Src/PW_Game/PW_Game.vcproj
@@ -490,6 +490,10 @@
 			RelativePath=".\pw_game.refs"
 			>
 		</File>
+		<File
+			RelativePath=".\server_ip.h"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
