Modified screens (Lobby, Loading)

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ pw_publish/branch/Client/PvP/Data
 pw_publish/branch/Client/PvP/Profiles
 pw_publish/branch/Client/PvP/Localization
 pw_publish/branch/Client/PvP/Bin
+*.pile
