Json parsers reimplemented with libraries

--- a/pw/branches/r1117/Src/PF_GameLogic/PF_GameLogic.vcproj
+++ b/pw/branches/r1117/Src/PF_GameLogic/PF_GameLogic.vcproj
@@ -42,7 +42,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/MP"
 				Optimization="0"
-				AdditionalIncludeDirectories="../..;../../vendor\zlib\include;../../vendor\DirectX\Include;../../vendor\fmod\api\inc;../../vendor\fmod\fmoddesignerapi\api\inc;../;../Server;../Game/PF;../../vendor/libcurl/include;..\Server\Chat;..\..\Vendor\boost"
+				AdditionalIncludeDirectories="../..;../../vendor\zlib\include;../../vendor\DirectX\Include;../../vendor\fmod\api\inc;../../vendor\fmod\fmoddesignerapi\api\inc;../;../Server;../Game/PF;../../vendor/libcurl/include;..\Server\Chat;..\..\Vendor\boost;..\..\Vendor\JsonCpp\include"
 				PreprocessorDefinitions="WIN32;_WINDOWS;DLL;_DEBUG;_DO_ASSERT;CURL_STATICLIB"
 				GeneratePreprocessedFile="0"
 				ExceptionHandling="0"
@@ -135,7 +135,7 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				WholeProgramOptimization="false"
-				AdditionalIncludeDirectories="../..;../../vendor\zlib\include;../../vendor\DirectX\Include;../../vendor\fmod\api\inc;../../vendor\fmod\fmoddesignerapi\api\inc;../;../Server;../Game/PF;../../vendor/libcurl/include;..\Server\Chat;..\..\Vendor\boost"
+				AdditionalIncludeDirectories="../..;../../vendor\zlib\include;../../vendor\DirectX\Include;../../vendor\fmod\api\inc;../../vendor\fmod\fmoddesignerapi\api\inc;../;../Server;../Game/PF;../../vendor/libcurl/include;..\Server\Chat;..\..\Vendor\boost;..\..\Vendor\JsonCpp\include"
 				PreprocessorDefinitions="WIN32;_WINDOWS;DLL;NDEBUG;_DO_ASSERT;;CURL_STATICLIB"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="0"
@@ -227,7 +227,7 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				WholeProgramOptimization="false"
-				AdditionalIncludeDirectories="../..;../../vendor\zlib\include;../../vendor\DirectX\Include;../../vendor\fmod\api\inc;../../vendor\fmod\fmoddesignerapi\api\inc;../;../Server;../Game/PF;../../vendor/libcurl/include;..\Server\Chat;..\..\Vendor\boost"
+				AdditionalIncludeDirectories="../..;../../vendor\zlib\include;../../vendor\DirectX\Include;../../vendor\fmod\api\inc;../../vendor\fmod\fmoddesignerapi\api\inc;../;../Server;../Game/PF;../../vendor/libcurl/include;..\Server\Chat;..\..\Vendor\boost;..\..\Vendor\JsonCpp\include"
 				PreprocessorDefinitions="WIN32;_WINDOWS;DLL;NDEBUG;_SHIPPING;CURL_STATICLIB"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="0"
@@ -318,7 +318,7 @@
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
-				AdditionalIncludeDirectories="../..;../../vendor\zlib\include;../../vendor\DirectX\Include;../../vendor\fmod\api\inc;../../vendor\fmod\fmoddesignerapi\api\inc;../;../Server;../Game/PF;../../vendor/libcurl/include;..\Server\Chat;..\..\Vendor\boost"
+				AdditionalIncludeDirectories="../..;../../vendor\zlib\include;../../vendor\DirectX\Include;../../vendor\fmod\api\inc;../../vendor\fmod\fmoddesignerapi\api\inc;../;../Server;../Game/PF;../../vendor/libcurl/include;..\Server\Chat;..\..\Vendor\boost;..\..\Vendor\JsonCpp\include"
 				PreprocessorDefinitions="WIN32;_WINDOWS;STATIC_LIB;NDEBUG;_SHIPPING;CURL_STATICLIB;STARFORCE_PROTECTED"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="0"
@@ -393,7 +393,7 @@
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
-				AdditionalIncludeDirectories="../..;../../vendor\zlib\include;../../vendor\DirectX\Include;../../vendor\fmod\api\inc;../../vendor\fmod\fmoddesignerapi\api\inc;../;../Server;../Game/PF;../../vendor/libcurl/include;..\Server\Chat;..\..\Vendor\boost"
+				AdditionalIncludeDirectories="../..;../../vendor\zlib\include;../../vendor\DirectX\Include;../../vendor\fmod\api\inc;../../vendor\fmod\fmoddesignerapi\api\inc;../;../Server;../Game/PF;../../vendor/libcurl/include;..\Server\Chat;..\..\Vendor\boost;..\..\Vendor\JsonCpp\include"
 				PreprocessorDefinitions="WIN32;_WINDOWS;STATIC_LIB;NDEBUG;_DO_ASSERT;STARFORCE_PROTECTED;CURL_STATICLIB"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="0"
