--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ pw_publish/branch/Client/PvP/Profiles
 pw_publish/branch/Client/PvP/Localization
 pw_publish/branch/Client/PvP/Bin
 *.pile
+PW_MicroUpdater/.vs/PW_MicroUpdater/v17
+PW_MicroUpdater/bin
+PW_MicroUpdater/obj
+PW_MicroUpdater/packages
