delete zip archive. no console

--- a/PW_MicroUpdater/PW_MicroUpdater.csproj
+++ b/PW_MicroUpdater/PW_MicroUpdater.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{6ACBB3B0-2401-472D-BF28-6F2B20FABC1A}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>PW_MicroUpdater</RootNamespace>
     <AssemblyName>PW_MicroUpdater</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
