Fixed (hopefully) MicroUpdater and PW_Game

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,8 @@ PW_MicroUpdater/.vs/PW_MicroUpdater/v17
 PW_MicroUpdater/bin
 PW_MicroUpdater/obj
 PW_MicroUpdater/packages
+pw/branches/r1117/Src/PW_MicroUpdater.exe
+pw/branches/r1117/Src/PW_MicroUpdater.exe.config
+pw/branches/r1117/Src/PW_MicroUpdater.pdb
+pw/branches/r1117/Src/Ionic.Zip.dll
+PW_MicroUpdater/.vs/PW_MicroUpdater.csproj.dtbcache.json
